[package]
name = "rbdc-tdengine"
version = "4.5.12"
edition = "2021"
description = "TDengine driver for rbatis"
readme = "Readme.md"
authors = ["tzw<tzw@tdcare.cn>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["ws"]
ws=["rbdc/rustls","taos/ws"]
ws-tls-rustls=["rbdc/tls-rustls","taos/ws-rustls"]
ws-tls-native-tls=["rbdc/tls-native-tls","taos/ws-native-tls"]
[dependencies]
rbs = "4.5"
rbdc = { version = "4.5", default-features = false, optional = true}

serde = "1"
serde_json = "1"
futures-io = {version="0.3.21",features=["std"]}
futures-core = { version = "0.3.19", default-features = false }
futures-util = {version="0.3.21",features = ["alloc", "sink"]}
chrono = "0.4.19"
log="0.4"
bigdecimal = { version = "0.2.0", features = ["serde"] }
#thiserror = "1.0.39"
#anyhow = "1.0.69"

fastdate = "0.3"

tokio = {version="1",features=["fs", "net", "rt", "rt-multi-thread", "time", "io-util"]}
tokio-util = {version="0.7.1",features=["compat"]}


taos = { version = "0.12.3", default-features = false,optional = true }
#taos={git="https://gitee.com/tdcare/taos-connector-rust.git",branch="v0.10.20-fix" , default-features = false,optional = true}
#taos = { version = "0.5.1", default-features = false, features = ["ws"] }
#taos-query = "0.5.1"
#taos = "*"
