[package]
name = "example"
version = "4.5.2"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
rbs = "4.5"
rbdc = { version = "4.5", default-features = false }
rbdc-tdengine={path="../"}
rbatis = { version = "4.5" }
rbdc-pool-deadpool = "4.5.6"

serde_json = "1"
fastdate = { version = "0.3"}
bigdecimal = { version = "0.2.0", features = ["serde"] }
log = "0.4.2"
fast_log = "1.5"
tokio = { version = "1.12", features = ["full"] }
chrono = "0.4.19"

anyhow = "1.0.69"